#24395 fix user icon on IE

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Site.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Site.css
@@ -806,6 +806,7 @@ End personal drop down menu
 .user-name {
 	max-width: 100px;
 	text-overflow: ellipsis;
+	vertical-align: bottom;
 	overflow: hidden;
 	float: none;
 	display: inline-block;
